Update Unsupervised ML CC.ipynb

--- a/Unsupervised ML CC.ipynb
+++ b/Unsupervised ML CC.ipynb
@@ -1116,7 +1116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# It seems  k = 3 clusters is more accurate thank k = 2 since some customers of cluster 1 have more near the centroid 0 than 1"
+    "# It seems  k = 3 clusters is more accurate thank k = 2 since some customers of cluster 1 are more near the centroid 0 than 1"
    ]
   },
   {
