--- a/Projet.ipynb
+++ b/Projet.ipynb
@@ -2259,7 +2259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Les problèmes de recall sont souvent liés à des données déséquilibrées en proportion. On essaye donc palier à ce problème avec le SMOTE, ce qui va créer de nouvelles lignes de données cohérentes avec le reste du dataset pour l'équilibrer."
+    "# Les problèmes de recall sont souvent liés à des données déséquilibrées en proportion. On essaye donc palier à ce problème avec le SMOTE : Syntethic Minority Over-Sampling Technique, qui va créer de nouvelles lignes de données cohérentes appartenant à la classe sous-représenté des défauts de paiement en s'inspirant des patterns du dataset."
    ]
   },
   {
